# mcl-rs

./: .gitignore  Cargo.toml  README.md
benches/: README.md
docs/: README.md
src/: collect_vec.rs  datatypes.rs  filters.rs  fmap.rs  gaussian.rs  lib.rs  notes.rs  odometry.rs  searcher_util.rs  sensor_models.rs  spatial_index.rs
src/filters/: kalman_filter.rs  particle_filter.rs  resampling.rs
src/filters/particle_filter/: resampling.rs
src/notes/: cddt.md  kld.md  mod.md  ndtmcl.md  rao.md  thrun.md
src/sensor_models/: beam_rangefinder_model.rs  cddt.rs  ndt.rs  scan_matching.rs  utils.rs
src/sensor_models/utils/: cddt.rs  raycast.rs  spatial_index.rs
src/utils/: collect_vec.rs  fmap.rs
