[package]
name = "mclrs"
version = "0.1.0"
authors = ["Anshuman <amedhi@connect.ust.hk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
# fxhash = "0.2.1"
nalgebra = "0.25.3"
num = "0.4.0"
boolinator = "2.4.0"
num-traits = "0.2.14"
rayon = "1.5.0"
bit-set = "0.5.2"
simdeez = "1.0.6"
autodiff = "0.3.0"
# rosrust = "0.9.5"
# rosrust_msg = "0.1.1"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "mcl"
harness = false
